--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,25 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.0.0" # Specify the Flutter version you are using
+          flutter-version: "3.22.0"
+
+      # Windows-specific steps for setting up SSH and SSH-Agent
+      - name: Setup custom SSH (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          echo "${{ secrets.GIT_SSH_KEY }}" | Out-File -Encoding ascii -FilePath ssh_key
+          New-Item -ItemType Directory -Force -Path "$env:USERPROFILE\.ssh"
+          Set-Content -Path "$env:USERPROFILE\.ssh\config" -Value @"
+          Host gitlab.com-codewave
+              HostName gitlab.com
+              User git
+              IdentityFile ${{ github.workspace }}\ssh_key
+              StrictHostKeyChecking no
+          "@
+          ssh-keyscan -t rsa gitlab.com >> $env:USERPROFILE\.ssh\known_hosts
+          Get-Content $env:USERPROFILE\.ssh\known_hosts
+          chmod 600 ssh_key
+        shell: powershell
 
       - name: Install dependencies
         run: flutter pub get
